...
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jBr-4m-73j">
                    <rect key="frame" x="16" y="758" width="382" height="48"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="48" id="a78-Cg-8Vx"/>
                    </constraints>
                    <state key="normal" title="Button"/>
                    <buttonConfiguration key="configuration" style="filled" title="Get Started"/>
                    <connections>
                        <action selector="ContinueAction:" destination="-1" eventType="touchUpInside" id="8NJ-as-2z3"/>
                    </connections>
                </button>
            </subviews>
            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
...
