...
                                    <subviews>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gV9-N6-vOI">
                                            <rect key="frame" x="16" y="29.5" width="343" height="31"/>
                                            <color key="backgroundColor" red="0.095287887660000001" green="0.33481196740000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <state key="normal" title="Button"/>
                                            <buttonConfiguration key="configuration" style="plain" title="Continue"/>
                                            <connections>
                                                <action selector="continueAction:" destination="-1" eventType="touchUpInside" id="PwF-3Y-Ob8"/>
                                            </connections>
                                        </button>
                                    </subviews>
                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
